# zenoh-tailscale

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
debian/: service
src/: main.rs  tailscale.rs
