[package]
authors = ["David Michael Weis <dweis7@gmail.com>"]
description = "Zenoh tailscale discovery"
edition = "2021"
license = "MIT OR APACHE"
name = "zenoh-tailscale"
publish = false
readme = "README.md"
repository = "https://github.com/dmweis/zenoh-tailscale"
version = "0.2.0"


[package.metadata.deb]
assets = [
  [
    "target/release/zenoh-tailscale",
    "/usr/bin/",
    "755",
  ],
]
maintainer = "David Weis <dweis7@gmail.com>"
maintainer-scripts = "debian/"

[package.metadata.deb.systemd-units]

[dependencies]
tokio = {version = "1", features = ["full"]}

# utilities
anyhow = {version = "1.0", features = ["backtrace"]}
clap = {version = "4.2", features = ["derive"]}
config = "0.13"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"

# logging
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", features = [
  "registry",
  "json",
]}

# zenoh
zenoh = "0.7.2-rc"
zenoh-config = "0.7.2-rc"
